DeleteAll button visibility bug has fixed, update workout functionality also added to project

--- a/assets/StyleSheet/style.css
+++ b/assets/StyleSheet/style.css
@@ -1,7 +1,7 @@
 :root {
   --color-brand--1: #ffb545;
   --color-brand--2: #00c46a;
-  --color-brand--3: #b80000;
+  --color-brand--3: #fe0000;
 
   --color-dark--1: #2d3439;
   --color-dark--2: #42484d;
@@ -12,6 +12,7 @@
   --box-shadow-1: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   --box-shadow-2: rgba(0, 0, 0, 0.19) 0px 10px 20px,
     rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  --box-shadow-3: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 * {
@@ -86,12 +87,18 @@ a:visited {
   background-color: var(--color-dark--2);
   border-radius: 5px;
   padding: 1.5rem 2.25rem;
-  margin-bottom: 2rem;
+  margin: 2rem 0;
   cursor: pointer;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 0.75rem 1.5rem;
+  transition: all 0.2s ease;
   box-shadow: var(--box-shadow-1);
+  z-index: 10;
+}
+.workout:hover {
+  box-shadow: var(--box-shadow-3);
+  transform: translateY(-5px);
 }
 .workout--running {
   border-left: 5px solid var(--color-brand--2);
@@ -116,9 +123,12 @@ a:visited {
   justify-content: center;
   gap: 12px;
 }
-.workout__buttons .workout__edit,
-.workout__buttons .workout__delete {
+.workout__buttons > * {
   font-size: 1.7rem;
+  transition: all 0.2s ease;
+}
+.workout__buttons > *:hover {
+  transform: scale(1.1);
 }
 .workout__buttons .workout__edit--btn {
   color: var(--color-brand--1);
@@ -127,7 +137,7 @@ a:visited {
   color: var(--color-brand--3);
 }
 .delete__all {
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   padding: 1.1rem 2rem;
   align-self: flex-start;
 }
@@ -135,10 +145,7 @@ a:visited {
   background-color: var(--color-brand--3);
   font-size: 1.5rem;
   color: var(--color-light--2);
-  display: none;
-}
-.delete__all--btn.show {
-  display: block;
+  font-weight: 600;
 }
 .workout__details {
   display: flex;
